<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">receiptApp</string>

    <string name="histo_month_expenses">Month expenses</string>
    <string name="histo_year_expenses">Year expenses</string>
    <string name="histo_month_expenses_by_atag">Month expenses by aggregate tags</string>
    <string name="histo_month_expenses_by_etag">Month expenses by element tags</string>
    <string name="histo_year_expenses_by_atag">Year expenses by aggregate tags</string>
    <string name="histo_year_expenses_by_etag">Year expenses by element tags</string>
    <string name="pie_count_by_atag">Month aggregates count by tags</string>
    <string name="pie_count_by_etag">Month elements count by tags</string>

    <string name="expenses">expenses</string>
    <string name="expense">expense</string>
    <string name="count">count</string>

    <string name="tag">Tag:</string>
    <string name="date">Date:</string>
    <string name="ammount">Amount:</string>

    <string name="num">Num:</string>
    <string name="cost">Cost:</string>
    <string name="name">Name:</string>

    <string name="sure_to_exit">Are you sure?</string>
    <string name="want_to_save">Do you want to save the edits?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="select_date">Select the date:</string>
    <string name="no_camera_permission">This app doesn\'t have permissions to open the camera</string>
    <string name="camera_error">there was an error with the camera</string>
    <string name="file_error">there was an error with the file</string>

    <string name="searchTag">search a tag</string>
    <string name="select_start_filter_date">Select aggregates from:</string>
    <string name="select_end_filter_date">Select aggregates until:</string>
    <string name="start_date_filter_label">from: </string>
    <string name="end_date_filter_label">to: </string>
    <string name="about_text">This app allows keeping record of every single little expense you have every day, you can add entire recipes here.\n\nFrom all this data we can generate graphs that highlight your spending habit.\n\nTo make all of it easier to use we constructed a customizable dashboard where you can choose what expenses you want to keep an eye on!
    </string>

</resources>