<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="80dp"

    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"

    app:cardElevation="5dp"
    app:cardCornerRadius="25dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tagTextView"
            android:layout_width="100dp"
            android:layout_height="25dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="45dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="Test_tag"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="45dp"
            android:gravity="center"
            android:text="@string/tag"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/name"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="12sp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginStart="210dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/num"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginStart="210dp"
            android:layout_marginTop="45dp"
            android:gravity="center"
            android:text="@string/cost"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="100dp"
            android:layout_height="25dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="10dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="Test"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/numTextView"
            android:layout_width="100dp"
            android:layout_height="25dp"
            android:layout_marginStart="260dp"
            android:layout_marginTop="10dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="3"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/costTextView"
            android:layout_width="100dp"
            android:layout_height="25dp"
            android:layout_marginStart="260dp"
            android:layout_marginTop="45dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="15€"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>