<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="120dp"

    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"

    app:cardElevation="5dp"
    app:cardCornerRadius="25dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageAttachment"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/costTextView"
            android:layout_width="130dp"
            android:layout_height="25dp"
            android:layout_marginStart="90dp"
            android:layout_marginTop="80dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="150€"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="80dp"
            android:text="@string/ammount"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="12sp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="130dp"
            android:layout_height="25dp"
            android:layout_marginStart="90dp"
            android:layout_marginTop="45dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="10/20/2021"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="45dp"
            android:gravity="center"
            android:text="@string/date"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/tag"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="12sp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tagTextView"
            android:layout_width="130dp"
            android:layout_height="25dp"
            android:layout_marginStart="90dp"
            android:layout_marginTop="10dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="Test"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>